// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FakeButton should render correctly based on the theme props 1`] = `
<div
  class="rmd-button rmd-button--text"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 2`] = `
<div
  class="rmd-button rmd-button--text rmd-button--contained"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 3`] = `
<div
  class="rmd-button rmd-button--text rmd-button--outline"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 4`] = `
<div
  class="rmd-button rmd-button--text rmd-button--text-primary"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 5`] = `
<div
  class="rmd-button rmd-button--text rmd-button--contained rmd-button--primary"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 6`] = `
<div
  class="rmd-button rmd-button--text rmd-button--outline rmd-button--text-primary rmd-button--outline-primary"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 7`] = `
<div
  class="rmd-button rmd-button--text rmd-button--text-secondary"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 8`] = `
<div
  class="rmd-button rmd-button--text rmd-button--contained rmd-button--secondary"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 9`] = `
<div
  class="rmd-button rmd-button--text rmd-button--outline rmd-button--text-secondary rmd-button--outline-secondary"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 10`] = `
<div
  class="rmd-button rmd-button--text rmd-button--text-warning"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 11`] = `
<div
  class="rmd-button rmd-button--text rmd-button--contained rmd-button--warning"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 12`] = `
<div
  class="rmd-button rmd-button--text rmd-button--outline rmd-button--text-warning rmd-button--outline-warning"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 13`] = `
<div
  class="rmd-button rmd-button--text rmd-button--text-error"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 14`] = `
<div
  class="rmd-button rmd-button--text rmd-button--contained rmd-button--error"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 15`] = `
<div
  class="rmd-button rmd-button--text rmd-button--outline rmd-button--text-error rmd-button--outline-error"
  role="button"
  tabindex="0"
>
  Button Text
</div>
`;

exports[`FakeButton should render correctly based on the theme props 16`] = `
<div
  class="rmd-button rmd-button--icon"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 17`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--contained"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 18`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--outline"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 19`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--text-primary"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 20`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--contained rmd-button--primary"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 21`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--outline rmd-button--text-primary rmd-button--outline-primary"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 22`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--text-secondary"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 23`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--contained rmd-button--secondary"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 24`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--outline rmd-button--text-secondary rmd-button--outline-secondary"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 25`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--text-warning"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 26`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--contained rmd-button--warning"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 27`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--outline rmd-button--text-warning rmd-button--outline-warning"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 28`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--text-error"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 29`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--contained rmd-button--error"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;

exports[`FakeButton should render correctly based on the theme props 30`] = `
<div
  class="rmd-button rmd-button--icon rmd-button--outline rmd-button--text-error rmd-button--outline-error"
  role="button"
  tabindex="0"
>
  <i />
</div>
`;
